@@ -1,4 +1,9 @@
-2007-06-15  Andreas Røsdal  <andreasr@gnome.org>
+2007-06-05  Andreas Røsdal  <andreasr@gnome.org>
+
+	* gnome_sudoku.py: Disable saving and loading, because of all the 
+	crashes reported to these features.
+
+2007-06-05  Andreas Røsdal  <andreasr@gnome.org>
 
 	* src/lib/gnome_sudoku.py:
 	* src/lib/printing.py: Ensure that g_thread_init is called
